cli/tests/testdata/npm/types_export_default/main.ts
import foo from "npm:@denotest/types-export-default";
foo();
